# finance_monitor

./: README.md  pyproject.toml
finance_monitor/: forecastgrapper.py  utils.py
notebooks/: 20250311_nvidia_forecast.csv  20250311_rhm-aktie_forecast.csv  dev.ipynb  forescasthandler.ipynb  get_forecast.ipynb
