[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "yfinance>=0.2.54",
]

[tool.setuptools.packages]
find = {}
